Chore: sequential collections can use getFirst() instead of get(0) (#1003)