@@ -86,7 +86,7 @@ public abstract class BaseLogin extends WebPage {
         protected List<String> load() {
             List<String> current = new ArrayList<>();
             current.addAll(domainOps.list().stream().map(Domain::getKey).sorted().collect(Collectors.toList()));
-            current.add(0, SyncopeConstants.MASTER_DOMAIN);
+            current.addFirst(SyncopeConstants.MASTER_DOMAIN);
             return current;
         }
     };
@@ -282,7 +282,7 @@ public abstract class BaseLogin extends WebPage {
 
             getModel().setObject(filtered.isEmpty()
                     ? Locale.ENGLISH
-                    : filtered.get(0));
+                    : filtered.getFirst());
         }
     }
 }
