@@ -55,7 +55,7 @@ public class ConnObjectAttrColumn extends AbstractColumn<ConnObject, String> {
         if (values == null || values.isEmpty()) {
             cellItem.add(new Label(componentId, ""));
         } else if (values.size() == 1) {
-            cellItem.add(new Label(componentId, values.get(0)));
+            cellItem.add(new Label(componentId, values.getFirst()));
         } else {
             cellItem.add(new Label(componentId, values.toString()));
         }
