@@ -319,7 +319,7 @@ public class TaskTest extends AbstractTest {
 
         task = (PullTask) taskDAO.findById(TaskType.PULL, "c41b9b71-9bfa-4f90-89f2-84787def4c5c").orElseThrow();
         assertEquals(1, task.getActions().size());
-        assertEquals(implementation, task.getActions().get(0));
+        assertEquals(implementation, task.getActions().getFirst());
 
         task.getActions().clear();
         task = taskDAO.save(task);
