@@ -103,7 +103,7 @@ public class CustomJWTSSOProvider implements JWTSSOProvider {
 
         List<User> matching = anySearchDAO.search(SearchCond.of(userIdCond), AnyTypeKind.USER);
         if (matching.size() == 1) {
-            User user = matching.get(0);
+            User user = matching.getFirst();
             Set<SyncopeGrantedAuthority> authorities = authDataAccessor.getAuthorities(user.getUsername(), null);
 
             return Pair.of(user, authorities);
