@@ -161,7 +161,7 @@ public abstract class AbstractTaskITCase extends AbstractITCase {
                 PagedResult<NotificationTaskTO> tasks = TASK_SERVICE.search(
                         new TaskQuery.Builder(TaskType.NOTIFICATION).notification(notification).build());
                 if (!tasks.getResult().isEmpty()) {
-                    notificationTask.set(tasks.getResult().get(0));
+                    notificationTask.set(tasks.getResult().getFirst());
                 }
             } catch (Exception e) {
                 // ignore
