@@ -139,7 +139,7 @@ public class AnyObjectITCase extends AbstractITCase {
 
         anyObjectTO = updateAnyObject(anyObjectUR).getEntity();
 
-        assertEquals(newLocation, anyObjectTO.getPlainAttr("location").get().getValues().get(0));
+        assertEquals(newLocation, anyObjectTO.getPlainAttr("location").get().getValues().getFirst());
     }
 
     @Test
@@ -200,7 +200,7 @@ public class AnyObjectITCase extends AbstractITCase {
         AnyObjectTO right = createAnyObject(anyObjectCR).getEntity();
 
         assertEquals(1, right.getRelationships().size());
-        assertEquals(left.getKey(), right.getRelationships().get(0).getOtherEndKey());
+        assertEquals(left.getKey(), right.getRelationships().getFirst().getOtherEndKey());
 
         AnyObjectUR anyObjectUR = new AnyObjectUR.Builder(left.getKey()).
                 relationship(new RelationshipUR.Builder(new RelationshipTO.Builder("inclusion").
@@ -290,7 +290,7 @@ public class AnyObjectITCase extends AbstractITCase {
 
         // Verify relationships for printer1
         assertEquals(1, printer1.getRelationships().size());
-        RelationshipTO rel1 = printer1.getRelationships().get(0);
+        RelationshipTO rel1 = printer1.getRelationships().getFirst();
         assertEquals(RelationshipTO.End.LEFT, rel1.getEnd());
         assertEquals(printer2.getKey(), rel1.getOtherEndKey());
         assertEquals(printer2.getType(), rel1.getOtherEndType());
@@ -311,7 +311,7 @@ public class AnyObjectITCase extends AbstractITCase {
 
         // Verify relationships for printer3
         assertEquals(1, printer3.getRelationships().size());
-        RelationshipTO rel3 = printer3.getRelationships().get(0);
+        RelationshipTO rel3 = printer3.getRelationships().getFirst();
         assertEquals(RelationshipTO.End.RIGHT, rel3.getEnd());
         assertEquals(printer2.getKey(), rel3.getOtherEndKey());
         assertEquals(printer2.getType(), rel3.getOtherEndType());
