@@ -179,7 +179,7 @@ public class KeymasterITCase extends AbstractITCase {
         list = findNetworkServices(NetworkService.Type.SRA, List::isEmpty, 30);
         assertFalse(list.isEmpty());
         assertEquals(1, list.size());
-        assertEquals(sra1, list.get(0));
+        assertEquals(sra1, list.getFirst());
 
         assertEquals(sra1, serviceOps.get(NetworkService.Type.SRA));
 
@@ -192,7 +192,7 @@ public class KeymasterITCase extends AbstractITCase {
         list = findNetworkServices(NetworkService.Type.SRA, List::isEmpty, 30);
         assertFalse(list.isEmpty());
         assertEquals(1, list.size());
-        assertEquals(sra1, list.get(0));
+        assertEquals(sra1, list.getFirst());
 
         assertEquals(sra1, serviceOps.get(NetworkService.Type.SRA));
 
@@ -213,9 +213,9 @@ public class KeymasterITCase extends AbstractITCase {
         List<Domain> initial = domainOps.list();
         assertNotNull(initial);
         assumeTrue(initial.stream().anyMatch(domain -> "Two".equals(domain.getKey())));
-        assumeTrue(initial.get(0) instanceof JPADomain);
+        assumeTrue(initial.getFirst() instanceof JPADomain);
 
-        JPADomain two = (JPADomain) initial.get(0);
+        JPADomain two = (JPADomain) initial.getFirst();
         String newdb = "syncopetest";
 
         // 1. create new domain
@@ -310,12 +310,12 @@ public class KeymasterITCase extends AbstractITCase {
         assertNotNull(initial);
         assumeTrue(initial.stream().anyMatch(domain -> "Two".equals(domain.getKey())));
 
-        if (initial.get(0) instanceof JPADomain) {
+        if (initial.getFirst() instanceof JPADomain) {
             assertThrows(KeymasterException.class, () -> domainOps.create(new JPADomain.Builder("Two").build()));
-        } else if (initial.get(0) instanceof Neo4jDomain) {
+        } else if (initial.getFirst() instanceof Neo4jDomain) {
             assertThrows(KeymasterException.class, () -> domainOps.create(new Neo4jDomain.Builder("Two").build()));
         } else {
-            throw new IllegalStateException("Unsupported Domain class: " + initial.get(0).getClass().getName());
+            throw new IllegalStateException("Unsupported Domain class: " + initial.getFirst().getClass().getName());
         }
     }
 
